# advent-of-code

./: .gitignore  README.md
2016/hs/: advent-of-code.cabal  day1.hs  day2.hs  day3.hs  day4.hs  day5.hs  day6.hs  day7.hs  day8.hs
2016/hs/.stack-work/install/x86_64-osx/lts-9.12/8.0.2/flag-cache/: ghc-paths-0.1.0.9-AhaDlGOsRAepox069XzG  haskeline-0.7.4.0-DeCMMzb9PSJC3zwcMXMk7s  intero-0.1.23  syb-0.7-4OKdCpwGutyB1rNRmoa0ya  terminfo-0.4.1.0-FNScbjwxa2Y3p4e5RvG3l
2017/: day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2018/: core.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2019/: Cargo.toml
2021/: .ocamlinit  aoc_2021.opam  day12.ml  day5.ml  daygen.sh  dune  dune-project  main.ml  utils.ml
2021/lib/: day1.ml  day10.ml  day11.ml  day2.ml  day4.ml  day5.ml  day6.ml  day8.ml  day9.ml  dune  utils.ml  utils.mli
2021/run/: dune  run.ml
2021/solutions/: day1.ml  day10.ml  day11.ml  day12.ml  day13.ml  day14.ml  day15.ml  day16.ml  day17.ml  day18.ml  day19.ml  day2.ml  day20.ml  day21.ml  day22.ml  day24.ml  day25.ml  day3.ml  day4.ml  day5.ml  day6.ml  day7.ml  day8.ml  day9.ml  dune
2021/test/: dune
2021/utils/: dune  graph.ml  list_ex.ml  list_ex.mli  point.ml  utils.ml  utils.mli  vec3.ml
(+260 files in other folders)
