name:                advent-of-code
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/takemyoxygen/playground
license:             MIT
author:              takemyoxygen
maintainer:          example@example.com
copyright:           2017 takemyoxygen
category:            sample
build-type:          Simple
cabal-version:       >=1.10

executable advent-of-code
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
